added flickr image to list

--- a/css/index.styl
+++ b/css/index.styl
@@ -47,8 +47,12 @@ header#header h1
       color: #333;
       ellipsis()
 
+      p
+        white-space: normal
+
       img
-        margin-right: 5px;
+        float: left
+        margin: -7px 10px 10px 0;
         border: 1px solid #333;
         box-shadow: 2px 2px 2px #333
         vertical-align: middle;
@@ -77,9 +81,9 @@ header#header h1
       box-flex(1)
     
     .item
-      height: 50px
+      height: 70px
       padding: 0 15px
-      line-height: 50px
+      line-height: 70px
       
       border-bottom: 1px solid #d2d2d1;
       color: #333;
@@ -92,6 +96,13 @@ header#header h1
         border-bottom-color: #609fd0;
         inset-box-shadow(0, 2px, 2px, #4775b8)
         
+      img
+        float: left
+        margin: 10px
+        height: 48px
+        width: 48px
+        border: 1px solid #333
+
     footer
       padding: 6px;
       border-top: 1px solid #c5c5c5;
